# esg-radar

./: .gitignore  .mcp.json  CLAUDE.md  README.md  app.yml  databricks.yml  package.json  pyproject.toml  tsconfig.json
.claude/skills/databricks-aibi-dashboards/: SKILL.md
.claude/skills/databricks-app-python/: 6-mcp-approach.md
.claude/skills/databricks-genie/: SKILL.md  conversation.md
.claude/skills/databricks-vector-search/: SKILL.md
src/app/: seed.py
src/esg_radar/backend/: app.py  db.py  models.py  router.py
src/esg_radar/backend/core/: _base.py  _config.py  _defaults.py  _factory.py  _headers.py  _static.py  dependencies.py  sql.py
src/esg_radar/ui/: index.html
src/esg_radar/ui/components/apx/: sidebar-layout.tsx  sidebar-user-footer.tsx
src/esg_radar/ui/components/ui/: sidebar.tsx
src/esg_radar/ui/lib/: api.ts
src/esg_radar/ui/routes/: __root.tsx  index.tsx
src/esg_radar/ui/routes/_sidebar/: dashboard.tsx  profile.tsx  route.tsx
src/esg_radar/ui/styles/: globals.css
src/esg_radar/ui/types/: routeTree.gen.ts
src/schema/: schema.sql
